--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                         Hello! I'm Kaushal Mallya, a CyberSecurity Analyst with 3+ years of hands-on experience in identifying and reporting security
                         vulnerabilities. I thrive on the challenges of defending against evolving cyber threats. My work is guided by a commitment to 
                         continuous learning and a drive to stay ahead in this fast-paced field.  I work as a freelance vulnerability management expert, 
-                        helping businesses protect their assets and build resilient security systems. My work is guided by a commitment to continuous 
-                        learning and a drive to stay ahead in this fast-paced field.
+                        helping businesses protect their assets and build resilient security systems.
                         When I'm not delving into code or analyzing vulnerabilities, you'll find me unwinding with gaming on F1® 23🏎️ or playing basketball🏀.
 
 
@@ -159,7 +158,7 @@
                 <div>
                     <div>
                         <i class="fa-solid fa-phone contact__icon" style="color: #7e57c2;"></i>
-                        <h3 style="color: #7e57c2;">Call Me</h3>
+                        <h3 class="contact__title" style="color: #7e57c2;">Call</h3>
                         <span>+91 8660449019</span>
                     </div><br><br>
                     <div>
