--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         Hello! I'm Kaushal Mallya, a CyberSecurity Analyst with 3+ years of hands-on experience in identifying and reporting security
                         vulnerabilities. I thrive on the challenges of defending against evolving cyber threats. My work is guided by a commitment to 
                         continuous learning and a drive to stay ahead in this fast-paced field.  I work as a freelance vulnerability management expert, 
-                        helping businesses protect their assets and build resilient security systems.
+                        helping businesses protect their assets and build resilient security systems.<br>
                         When I'm not delving into code or analyzing vulnerabilities, you'll find me unwinding with gaming on F1® 23🏎️ or playing basketball🏀.
 
 
